--- a/qml.qrc
+++ b/qml.qrc
@@ -1,7 +1,8 @@
 <RCC>
     <qresource prefix="/">
+        <file>res/File.png</file>
+        <file>res/icon.png</file>
         <file>main.qml</file>
-	  <file>res/File.png</file>
-	  <file>res/icon.ico</file>
+        <file>QML_SettingUI.qml</file>
     </qresource>
 </RCC>
